InventoryParser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> OPERATE NUMBER article
Rule 2     command -> OPERATE
Rule 3     command -> OPERATE OPERATE article
Rule 4     attribute -> COLOR
Rule 5     attribute -> MATERIAL
Rule 6     attribute -> SIZE
Rule 7     article -> KIND
Rule 8     article -> attribute article

Terminals, with rules where they appear

COLOR                : 4
KIND                 : 7
MATERIAL             : 5
NUMBER               : 1
OPERATE              : 1 2 3 3
SIZE                 : 6
error                : 

Nonterminals, with rules where they appear

article              : 1 3 8
attribute            : 8
command              : 0

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . OPERATE NUMBER article
    (2) command -> . OPERATE
    (3) command -> . OPERATE OPERATE article

    OPERATE         shift and go to state 2

    command                        shift and go to state 1

state 1

    (0) S' -> command .



state 2

    (1) command -> OPERATE . NUMBER article
    (2) command -> OPERATE .
    (3) command -> OPERATE . OPERATE article

    NUMBER          shift and go to state 4
    $end            reduce using rule 2 (command -> OPERATE .)
    OPERATE         shift and go to state 3


state 3

    (3) command -> OPERATE OPERATE . article
    (7) article -> . KIND
    (8) article -> . attribute article
    (4) attribute -> . COLOR
    (5) attribute -> . MATERIAL
    (6) attribute -> . SIZE

    KIND            shift and go to state 6
    COLOR           shift and go to state 8
    MATERIAL        shift and go to state 9
    SIZE            shift and go to state 10

    article                        shift and go to state 5
    attribute                      shift and go to state 7

state 4

    (1) command -> OPERATE NUMBER . article
    (7) article -> . KIND
    (8) article -> . attribute article
    (4) attribute -> . COLOR
    (5) attribute -> . MATERIAL
    (6) attribute -> . SIZE

    KIND            shift and go to state 6
    COLOR           shift and go to state 8
    MATERIAL        shift and go to state 9
    SIZE            shift and go to state 10

    article                        shift and go to state 11
    attribute                      shift and go to state 7

state 5

    (3) command -> OPERATE OPERATE article .

    $end            reduce using rule 3 (command -> OPERATE OPERATE article .)


state 6

    (7) article -> KIND .

    $end            reduce using rule 7 (article -> KIND .)


state 7

    (8) article -> attribute . article
    (7) article -> . KIND
    (8) article -> . attribute article
    (4) attribute -> . COLOR
    (5) attribute -> . MATERIAL
    (6) attribute -> . SIZE

    KIND            shift and go to state 6
    COLOR           shift and go to state 8
    MATERIAL        shift and go to state 9
    SIZE            shift and go to state 10

    attribute                      shift and go to state 7
    article                        shift and go to state 12

state 8

    (4) attribute -> COLOR .

    KIND            reduce using rule 4 (attribute -> COLOR .)
    COLOR           reduce using rule 4 (attribute -> COLOR .)
    MATERIAL        reduce using rule 4 (attribute -> COLOR .)
    SIZE            reduce using rule 4 (attribute -> COLOR .)


state 9

    (5) attribute -> MATERIAL .

    KIND            reduce using rule 5 (attribute -> MATERIAL .)
    COLOR           reduce using rule 5 (attribute -> MATERIAL .)
    MATERIAL        reduce using rule 5 (attribute -> MATERIAL .)
    SIZE            reduce using rule 5 (attribute -> MATERIAL .)


state 10

    (6) attribute -> SIZE .

    KIND            reduce using rule 6 (attribute -> SIZE .)
    COLOR           reduce using rule 6 (attribute -> SIZE .)
    MATERIAL        reduce using rule 6 (attribute -> SIZE .)
    SIZE            reduce using rule 6 (attribute -> SIZE .)


state 11

    (1) command -> OPERATE NUMBER article .

    $end            reduce using rule 1 (command -> OPERATE NUMBER article .)


state 12

    (8) article -> attribute article .

    $end            reduce using rule 8 (article -> attribute article .)

